Improved the use cases
